--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@prisma/client": "^6.6.0",
     "animate.css": "^4.1.1",
     "axios": "^1.8.3",
     "axis": "^1.0.0",
@@ -21,13 +23,15 @@
     "firebase": "^11.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "^15.2.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "sequelize": "^6.37.6",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
@@ -46,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^4.0.15",
     "vite": "^6.2.1"
   }
