--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "axis": "^1.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
@@ -28,9 +30,11 @@
     "next": "^15.2.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
