--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,8 @@
-DB_URL=mysql://root:lQNTdpDrcJHszOQzWXUAYnKxhlzGiDqZ@nozomi.proxy.rlwy.net:10208/railway
+DB_USER=root
+DB_PASSWORD=qaz1xcvb2gr3eW
+DB_NAME=challenge_platform
+DB_HOST=localhost
+DB_DIALECT=mysql
+
+JUDGE0_API_KEY=0ce921d8bbmsh925463c62d4a814p1f570fjsn9aeb1e1213fa
+JUDGE0_API_HOST=judge0-ce.p.rapidapi.com
