--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.6.0",
     "animate.css": "^4.1.1",
@@ -25,6 +26,7 @@
     "firebase": "^11.4.0",
     "framer-motion": "^12.9.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.509.0",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
